# LibDB

./: .flake8  .pre-commit-config.yaml  .prettierrc.yaml  Dockerfile  README.md  gunicorn.conf.py  log.conf  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yml  test.yml
libdb/: __init__.py  data_handlers.py  database.py  default_config.py  log.py
libdb/blueprints/: __init__.py  books.py  library.py  manage.py
libdb/config/: __init__.py  configure_app.py  default_config.py
libdb/forms/: __init__.py  add_author.py  add_book.py  search.py
libdb/forms/__OLD/: add_author.py
libdb/forms/books/: __init__.py  add.py  loan.py
libdb/models/: __init__.py  author.py  book.py  book_author.py  genre.py  person.py  publisher.py  series.py  shelf.py
libdb/services/: __init__.py
libdb/services/books/: __init__.py  add.py  edit.py  enums.py  list.py  loan.py  view.py
libdb/services/shelves/: __init__.py  list.py
libdb/static/: style.css
libdb/templates/: _formhelpers.html  _formhelpers.jinja  base.html  base.jinja
libdb/templates/books/: add.jinja  list.jinja
libdb/templates/manage/: add_author.jinja  add_book.jinja
migrations/: 1751896838_initial_spec.py  1751898042_add_genres.py  1751899057_add_lent_out.py  1768273265_update_models.py  1768334198_split_author_first_last_names.py
tests/: test_placeholder.py
